trunk/test/T2/Pass/T2_fib.ic
class ComputeFib{
	void main(int n){
		Fib.fib(n);
	}
}

class Fib{
	static int fib(int n){
		if (n == 1) 
			return 1;
		else
			return n + fib(n-1);
	}
}