trunk/test/T2/Fail/T2_usingKeyword.ic
static class Bad{
	static void static(int fail){
	}
}